kubernetes/components/envoy-pocketid/security-policy.yaml
---
# yaml-language-server: $schema=https://k8s-schemas.home-operations.com/gateway.envoyproxy.io/securitypolicy_v1alpha1.json
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: SecurityPolicy
metadata:
  name: &name ${APP}-pocketid
spec:
  targetRefs:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: ${APP}
  oidc:
    provider:
      issuer: https://id.techtales.io
    clientIDRef:
      name: *name
    clientSecret:
      name: *name
    redirectURL: https://${APP}.techtales.io/oauth2/callback
    logoutPath: /oauth2/logout
    forwardAccessToken: true
    cookieNames:
      idToken: pocketid-token
    scopes:
      - profile
      - email
      - groups
  jwt:
    providers:
      - name: pocketid
        issuer: https://id.techtales.io
        remoteJWKS:
          uri: https://id.techtales.io/.well-known/jwks.json
        extractFrom:
          cookies:
            - pocketid-token
        claimToHeaders:
          - claim: display_name
            header: X-User-Name
          - claim: email
            header: X-User-Email
          - claim: sub
            header: X-User-Id
          - claim: picture
            header: X-User-Picture
  authorization:
    defaultAction: Deny
    rules:
      - action: Allow
        principal:
          jwt:
            provider: pocketid # must match a provider name in spec.jwt
            claims:
              - name: groups
                valueType: StringArray
                values:
                  - ${POCKETID_GROUP:=privileged-users}
